folder organisation and navigation bar

--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="../css/project.css">
 
     <title> Login </title>
 </head>
@@ -11,7 +11,7 @@
 
 <body>
     <div class="logo">
-        <img src="Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
+        <img src="../Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
     </div>
 
     <div class="heading">
