--- a/html/signup.html
+++ b/html/signup.html
@@ -3,14 +3,14 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="../css/project.css">
 
     <title> Login </title>
 </head>
 
 <body>
     <div class="logo">
-        <img src="Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
+        <img src="../Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
     </div>
 
     <div class="heading">
@@ -19,7 +19,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="">
+        <form align="center" method="post" action="login.html">
 
 
 
