--- a/html/resetpassword.html
+++ b/html/resetpassword.html
@@ -2,7 +2,7 @@
 <html>
 <head lang = "en">
 <meta charset="UTF-8">
-<link rel = "stylesheet" href = "project.css">
+<link rel = "stylesheet" href = "../css/project.css">
 
 <title> The Tech Ward </title>
 </head>
