--- a/html/navigation.html
+++ b/html/navigation.html
@@ -9,29 +9,11 @@
 </head>
 
 <body>
-    <nav>
+  <nav>
         <div class="logo"> <img src="../Images/Tech Logo.png" width="100" height="100"> </div>
-        <div class="n">
-            <div class="text">
-                <p> The Tech Ward</p>
-            </div>
-            <ul>
-                <li><a href="#">New Forum</a></li>
+        <div class="n"><div class="text"><p> The Tech Ward</p></div>
+            <ul><li><a href="NewForm.html">New Forum</a></li>
                 <li><a href="#">Search For Forums</a></li>
                 <li><a href="#">Account</a></li>
-                <li><a href="#">Logout</a></li>
-
-
-
-            </ul>
-
-        </div>
-
-    </nav>
-
-
-
-
-
-
+                <li><a href="#">Logout</a></li> </ul></div></nav>
 </body>
