--- a/html/login.html
+++ b/html/login.html
@@ -7,8 +7,7 @@
 
     <title> Login </title>
 </head>
-
-
+<object style = "width: 100%" type="text/html" data="navigation.html"></object>
 <body>
     <div class="logo">
         <img src="../Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
@@ -19,7 +18,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="">
+        <form align="center" method="post" action="login.php">
 
 
             <label for="email">Email address:</label>
@@ -37,6 +36,7 @@
         <br><br>
         <a href="signup.html">Don't have an account?</a>
     </div>
+
 
 
     <footer>
