--- a/html/signup.html
+++ b/html/signup.html
@@ -8,6 +8,10 @@
     <title> Login </title>
 </head>
 
+<header>
+    <iframe style = "width: 100%;" src="navigation.html"></iframe>
+</header>
+
 <body>
     <div class="logo">
         <img src="../Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
@@ -19,7 +23,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="login.html">
+        <form align="center" method="post" action="signun.php">
 
 
 
