--- a/html/resetpassword.html
+++ b/html/resetpassword.html
@@ -3,6 +3,7 @@
 <head lang = "en">
 <meta charset="UTF-8">
 <link rel = "stylesheet" href = "../css/project.css">
+<link href = "../project.css" rel = "style/css">
 
 <title> The Tech Ward </title>
 </head>
