--- a/html/homepage.html
+++ b/html/homepage.html
@@ -25,7 +25,7 @@
     <a href = "login.html">Log In</a>
   </header>
 
-  <div id = "homepage-wrapper">
+  <div class = "wrapper">
     <div id = "signup-side">
       <h1>Stay Up To Date With The Latest Tech Discussions</h1>
       <br>
