--- a/html/signup.html
+++ b/html/signup.html
@@ -9,12 +9,12 @@
 </head>
 
 <header>
-    <iframe style = "width: 100%;" src="navigation.html"></iframe>
+    <object style = "width: 100%" type="text/html" data="navigation.html"></object>
 </header>
 
 <body>
     <div class="logo">
-        <img src="../Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
+        <img src="../Images/logo.png" alt="Tech Ward Logo" width="150" height="150" />
     </div>
 
     <div class="heading">
