--- a/html/NewForm.html
+++ b/html/NewForm.html
@@ -15,24 +15,20 @@
     <!-- <object style = "width: 100%" type="text/html" data="../html/navigation.html"></object> -->
 
    <nav>
-        <div class="logo"> <img src="../Images/Tech Logo.png" width="100" height="100"> </div>
+        <div class="logo"> <img src="../Images/logo.png" width="100" height="100"> </div>
         <div class="n"><div class="text"><p> The Tech Ward</p></div>
-            <ul><li><a href="#">New Forum</a></li>
+            <ul><li><a href="NewForm.html">New Forum</a></li>
                 <li><a href="#">Search For Forums</a></li>
                 <li><a href="#">Account</a></li>
                 <li><a href="#">Logout</a></li> </ul></div></nav>
 
 </header> 
 
-    <div class="heading">
-        <h1>Create a Forum</h1>
-    </div>
 
+<div class = "wrapper">
     <div class="lform">
+        <h1>Create a Forum</h1>
         <form align="center" method="post" action="#">
-
-
-
             <label for="title">Title:</label>
             <input type="text" name="title"  required id="title">
             <br><br>
@@ -46,7 +42,8 @@
             <button type="submit">post</button>
         </form>
 
-
+    </div>
+    </div>
         <footer>
             <a href="#">Home</a> | <a href="#">Browse</a> | <a href="#">Search</a><br><br>
             <small><i>Copyright &copy; 2023 The Tech Ward</i></small>
