--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
 <body>
     
     <div class="logo">
-        <img src="../Images/Tech Logo.png" alt="Tech Ward Logo" width="150" height="150" />
+        <img src="../Images/.png" alt="Tech Ward Logo" width="150" height="150" />
     </div>
 
     <div class="heading">
