--- a/html/navigation.html
+++ b/html/navigation.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-        <div class="logo"> <img src="../Images/Tech Logo.png" width="100" height="100"> </div>
+        <div class="logo"> <img src="../Images/logo.png" width="100" height="100"> </div>
         <div class="n"><div class="text"><p> The Tech Ward</p></div>
             <ul><li><a href="NewForm.html">New Forum</a></li>
                 <li><a href="#">Search For Forums</a></li>
