--- a/html/signup.html
+++ b/html/signup.html
@@ -9,7 +9,7 @@
 </head>
 
 <header>
-    <object style = "width: 100%" type="text/html" data="navigation.html"></object>
+  
 </header>
 
 <body>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="signun.php">
+        <form align="center" method="post" action="login.html">
 
 
 
