--- a/html/login.html
+++ b/html/login.html
@@ -8,11 +8,11 @@
 
     <title> Login </title>
 </head>
-<object style = "width: 100%" type="text/html" data="navigation.html"></object>
+
 <body>
     
     <div class="logo">
-        <img src="../Images/.png" alt="Tech Ward Logo" width="150" height="150" />
+        <img src="../Images/logo.png" alt="Tech Ward Logo" width="150" height="150" />
     </div>
 
     <div class="heading">
@@ -20,7 +20,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="login.php">
+        <form align="center" method="post" action="#">
 
 
             <label for="email">Email address:</label>
