Sithara always meri

--- a/html/signup.html
+++ b/html/signup.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="login.html">
+        <form align="center" method="post" action="../php/newuser.php">
 
 
 
