--- a/html/NewForm.html
+++ b/html/NewForm.html
@@ -28,7 +28,7 @@
 <div class = "wrapper">
     <div class="lform">
         <h1>Create a Forum</h1>
-        <form align="center" method="post" action="#">
+        <form align="center" method="post" action="../php/newform.php">
             <label for="title">Title:</label>
             <input type="text" name="title"  required id="title">
             <br><br>
