--- a/html/new_discussion.html
+++ b/html/new_discussion.html
@@ -27,8 +27,8 @@
 
 <div class = "wrapper">
     <div class="lform">
-        <h1>Create a Forum</h1>
-        <form align="center" method="post" action="../php/newform.php">
+        <h1>Create a Discussion</h1>
+        <form align="center" method="post" action="../php/new_discussion.php">
             <label for="title">Title:</label>
             <input type="text" name="title"  required id="title">
             <br><br>
@@ -36,7 +36,7 @@
             <textarea name="desc" required id="description"></textarea>
             <br><br>
             <label for="image">Upload Image (optional) : </label>
-            <input type="file" id="image" name="image" accept="image/png, image/jpeg" multiple>
+            <input type="file" id="image" name="image" accept="image/png, image/jpeg" enctype="multipart/form-data">
          <br><br>
             <button type="reset">clear form</button>
             <button type="submit">post</button>
