--- a/html/navigation.html
+++ b/html/navigation.html
@@ -12,7 +12,7 @@
   <nav>
         <div class="logo"> <img src="../Images/logo.png" width="100" height="100"> </div>
         <div class="n"><div class="text"><p> The Tech Ward</p></div>
-            <ul><li><a href="NewForm.html">New Forum</a></li>
+            <ul><li><a href="new_discussion.html">New Discussion</a></li>
                 <li><a href="#">Search For Forums</a></li>
                 <li><a href="#">Account</a></li>
                 <li><a href="#">Logout</a></li> </ul></div></nav>
