--- a/html/new_discussion.html
+++ b/html/new_discussion.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/project.css">
@@ -11,16 +12,22 @@
     
 </head>
 <body>
+   
+
+
+
+
+    
     <header>
     <!-- <object style = "width: 100%" type="text/html" data="../html/navigation.html"></object> -->
 
    <nav>
         <div class="logo"> <img src="../Images/logo.png" width="100" height="100"> </div>
         <div class="n"><div class="text"><p> The Tech Ward</p></div>
-            <ul><li><a href="NewForm.html">New Forum</a></li>
+            <ul><li><a href="../php/logincheck.php">New Discussion</a></li>
                 <li><a href="#">Search For Forums</a></li>
                 <li><a href="#">Account</a></li>
-                <li><a href="#">Logout</a></li> </ul></div></nav>
+                <li><a href="../php/logout.php">Logout</a></li> </ul></div></nav>
 
 </header> 
 
