--- a/html/navigation.html
+++ b/html/navigation.html
@@ -12,8 +12,8 @@
   <nav>
         <div class="logo"> <img src="../Images/logo.png" width="100" height="100"> </div>
         <div class="n"><div class="text"><p> The Tech Ward</p></div>
-            <ul><li><a href="new_discussion.html">New Discussion</a></li>
+            <ul><li><a href="../php/logincheck.php">New Discussion</a></li>
                 <li><a href="#">Search For Discussion</a></li>
                 <li><a href="#">Account</a></li>
-                <li><a href="#">Logout</a></li> </ul></div></nav>
+                <li><a href="../php/logout.php">Logout</a></li> </ul></div></nav>
 </body>
