--- a/html/login.html
+++ b/html/login.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="../php/login.php">
+        <form align="center" method="post" action="../php/login/login.php">
 
 
             <label for="email">Email address:</label>
