--- a/html/homepage.html
+++ b/html/homepage.html
@@ -21,7 +21,7 @@
   </head>
   <body>
   <header>
-    <a href = "discussions.html">Continue As Guest</a>
+    <a href = "../php/pages/show_discussions.php">Continue As Guest</a>
     <a href = "login.html">Log In</a>
   </header>
 
