--- a/html/signup.html
+++ b/html/signup.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="lform">
-        <form align="center" method="post" action="../php/newuser.php" id = "mainform">
+        <form align="center" method="post" action="../php/create/newuser.php" id = "mainform">
 
 
 
