--- a/html/navigation.html
+++ b/html/navigation.html
@@ -14,6 +14,6 @@
         <div class="n"><div class="text"><p> The Tech Ward</p></div>
             <ul><li><a href="../php/login/logincheck.php">New Discussion</a></li>
                 <li><a href="#">Search For Discussion</a></li>
-                <li><a href="#">Account</a></li>
+                <li><a href="../php/pages/account.php">Account</a></li>
                 <li><a href="../php/login/logout.php">Logout</a></li> </ul></div></nav>
 </body>
