added hrefs to logos and sql schema

--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,9 @@
 <body>
     
     <div class="logo">
+        <a href="../html/homepage.html">
         <img src="../Images/logo.png" alt="Tech Ward Logo" width="150" height="150" />
+    </a>
     </div>
 
     <div class="heading">
