--- a/html/navigation.html
+++ b/html/navigation.html
@@ -15,5 +15,6 @@
             <ul><li><a href="../php/login/logincheck.php">New Discussion</a></li>
                 <li><a href="#">Search For Discussion</a></li>
                 <li><a href="../php/pages/account.php">Account</a></li>
+                <li><a href="../php/pages/admin.php">Admin</a></li>
                 <li><a href="../php/login/logout.php">Logout</a></li> </ul></div></nav>
 </body>
