fixed image path

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -34,7 +34,7 @@
     </div>
 
     <div id = "login-side">
-    <img src = "../images/logo.png">
+    <img src = "../Images/logo.png">
     </div>
   </div>
 
