--- a/html/navigation.html
+++ b/html/navigation.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-        <div class="logo"><a href = "../php/pages/show_discussions.php"> <img src="../images/logo.png" width="100" height="100"> </a> </div>
+        <div class="logo"><a href = "../php/pages/show_discussions.php"> <img src="../Images/logo.png" width="100" height="100"> </a> </div>
         <div class="n"><div class="text"><a href = "../php/pages/show_discussions.php"> <p> The Tech Ward</p></a></div>
             <ul><li><a href="../php/login/logincheck.php">New Discussion</a></li>
                 <li><a href="#">Search For Discussion</a></li>
