css for homepage

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -4,39 +4,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="../css/project.css">
-<style>
-  body{
+    <link rel = "stylesheet" href="../css/home.css">
 
-    height: 100%;
-  }
 
-  header{
-    float: right;
-    clear: both;
-  }
-
-</style>
 
   </head>
   <body>
-  <header>
+  
+    <div id = "top">
     <a href = "../php/pages/show_discussions.php">Continue As Guest</a>
     <a href = "login.html">Log In</a>
-  </header>
+  </div>
 
-  <div class = "wrapper">
+
+
     <div id = "signup-side">
+      <br><br> <br><br><br><br><br><br><br><br><br><br><br><br>
       <h1>Stay Up To Date With The Latest Tech Discussions</h1>
-      <br>
-      <p>Have the opportunity to introduce, discuss, debate, and learn from the latets tech topics</p>
-      <a href = "signup.html">Sign Up</a>
+      <h3>Have the opportunity to introduce, discuss, debate, and learn from the latets tech topics</h3>
+      <br> <br>
+      <a id = "s" href = "signup.html">Sign Up</a>
     </div>
 
     <div id = "login-side">
-    <img src = "../Images/logo.png">
+      <br><br> <br><br><br><br>
+    <img  src = "../Images/logo.png">
     </div>
-  </div>
+  
 
   </body>
 </html>
