removed file from edit field and forget pass

--- a/html/resetpassword.html
+++ b/html/resetpassword.html
@@ -8,7 +8,7 @@
 <title> The Tech Ward </title>
 </head>
 <body>
-<p>Still Under Construction</p>
-<p>You can reset your password here</p>
+
+<p>We will send an email soon to your registered email.</p>
 </body>
 
