--- a/html/login.html
+++ b/html/login.html
@@ -8,6 +8,12 @@
 
     <title> Login </title>
 </head>
+<style>body{
+    background-image: url("https://images.unsplash.com/photo-1614850523060-8da1d56ae167");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}</style>
 
 <body>
     
