--- a/html/signup.html
+++ b/html/signup.html
@@ -23,6 +23,12 @@
         }
         
       </script>
+      <style>body{
+        background-image: url("https://images.unsplash.com/photo-1614850523060-8da1d56ae167");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }</style>
 </head>
 
 <header>
