--- a/html/resetpassword.html
+++ b/html/resetpassword.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel = "stylesheet" href = "../css/project.css" >
 <head lang = "en">
 <meta charset="UTF-8">
 <link rel = "stylesheet" href = "../css/project.css">
