--- a/html/signup.html
+++ b/html/signup.html
@@ -64,7 +64,7 @@
             <input type="password" name="cpassword" id="cpass" required>
             <br><br>
             <label for="image">Upload Profile Photo (optional) : </label>
-            <input type="file" id="image" name="image">
+            <input type="file" id="image" name="image" accept="image/png, image/gif, image/jpeg">
          <br><br>
             <button type="submit">SIGN IN</button>
         </form>
